# matchable

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
include/matchable/: MatchableMaker.h  matchable.h  matchable_fwd.h
scripts/: build_and_install.py  list.sh  run_all.sh  run_test.sh  setup.py  setup.sh  test_buildtimes.py  update_readme_matchable_usage.py
src/: MatchableMaker.cpp  matchable.h  matchable_fwd.h
test/include/: test_ok.h
test/programs/: cards.cpp  escapable.cpp  exotic_spread.cpp  getting_started.cpp  matchable.cpp  matchable_usage.cpp  matchables_merge_spreads.cpp  matchbox.cpp  max_variants.cpp  observer.cpp  property_matchable.cpp  relationships.cpp  self_property.cpp  sorting.cpp  spread_matchable.cpp  spreadvectof_matchable.cpp  spreadx2_matchable.cpp  unmatchable.cpp
test_buildtimes/prepare/: CMakeLists.txt  TimeUnit.h  matchables.h
test_buildtimes/prepare/full/: IncludedAllOverThePlace.cpp  IncludedAllOverThePlace.h
test_buildtimes/prepare/fwd/: IncludedAllOverThePlace.cpp  IncludedAllOverThePlace.h
test_scripts/: run_test.sh
